--- a/README
+++ b/README
@@ -35,11 +35,12 @@ programming interface is now considered stable.
 A "thing" in the symbol tree can be either a reference to a node, or a
 reference to an array of references to nodes.
 
-A node is a four-element array with the elements
+A node is a five-element array with the elements
   [0] => TYPE (MODULE|INTERFACE|STRUCT|UNION|ENUM|TYPEDEF...)
   [1] => NAME
   [2] => SUBORDINATES
-  [3] => SCOPEREF
+  [3] => COMMENT
+  [4] => SCOPEREF
 
 Some IDL types are representable as a simple numeric constant;
 they do not require nodes.  We'll call these types "elementary".
@@ -74,9 +75,9 @@ Contents of SUBORDINATES:
   INTERFACE_FWD   Reference to the node of the full interface declaration.
 
   STRUCT or       Reference to an array of node references representing the
-  EXCEPTION       member components of the struct or exception.   
-                  Each member representative node is a triplet consisting
-                  of (TYPE, NAME, <dimref>).
+  EXCEPTION       member components of the struct or exception.
+                  Each member representative node is a quadruplet consisting
+                  of (TYPE, NAME, <dimref>, COMMENT).
                   The <dimref> is a reference to a list of dimension numbers,
                   or is 0 if no dimensions were given.
 
@@ -99,11 +100,11 @@ Contents of SUBORDINATES:
                   numbers, or the null value if no dimensions are given.
 
   SEQUENCE        As a special case, the NAME element of a SEQUENCE node
-                  does not contain a name (as sequences are anonymous 
+                  does not contain a name (as sequences are anonymous
                   types), but instead is used to hold the bound number.
                   If the bound number is 0, then it is an unbounded
                   sequence. The SUBORDINATES element contains the type
-                  descriptor of the base type of the sequence. This 
+                  descriptor of the base type of the sequence. This
                   descriptor could itself be a reference to a SEQUENCE
                   defining node (that is, a nested sequence definition.)
                   Bounded strings are treated as a special case of sequence.
@@ -138,7 +139,9 @@ Contents of SUBORDINATES:
   VALUETYPE_BOX   Reference to the defining type node.
 
   VALUETYPE_FWD   Subordinates unused.
-                  
+
+  NATIVE          Subordinates unused.
+
   ATTRIBUTE       Reference to a two-element array; element 0 is the read-
                   only flag (0 for read/write attributes), element 1 is a
                   type descriptor of the attribute's type.
@@ -159,11 +162,35 @@ Contents of SUBORDINATES:
                   within the include file. The Name element of this node
                   contains the include file name.
 
-The SCOPEREF element is a reference back to the node of the module or 
+  PRAGMA_PREFIX   Subordinates unused.
+
+  PRAGMA_VERSION  Version string.
+
+  PRAGMA_ID       ID string.
+
+  PRAGMA          This is for the general case of pragmas that are none
+                  of the above, i.e. pragmas unknown to IDLtree.
+                  The NAME holds the pragma name, and SUBORDINATES
+                  holds a reference to all further text appearing after
+                  the pragma name, if any.
+
+
+The COMMENT element holds the comment text that precedes an IDL item
+or appears on the same line as the IDL item.
+Note that comments that relate to an IDL item, but appear on lines
+*after* the IDL item, are not handled correctly: They are associated with
+the following IDL item. Comment text appearing after the last IDL item
+is lost.
+The comment text is stored as a list to accomodate multi-line comments.
+The lines in this list are not newline terminated. The COMMENT field is a
+reference to this list, or contains the value 0 if no comment is present
+at the IDL item.
+
+The SCOPEREF element is a reference back to the node of the module or
 interface enclosing the current node. If the current node is already
 at the global scope level, then the SCOPEREF is 0. All nodes have this
 element except for the parameter nodes of methods and the component nodes
 of structs/unions/exceptions.
 
--- 2002/06/24  okellogg@users.sourceforge.net
+-- 2002/07/08  okellogg@users.sourceforge.net
 
